# hreq

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md  run-topsites.sh  update-topsites.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
data/: iso8859.txt  shiftjis.txt
examples/: cli.rs  client_simple.rs  run_file.rs  server_hello.rs  server_path_arg.rs  server_tls.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_charset.rs
psl/: Cargo.toml  update.sh
psl/src/: date.txt  lib.rs
src/: agent.rs  async_impl.rs  block_ext.rs  body.rs  body_codec.rs  body_send.rs  bw.rs  charset.rs  conn.rs  conn_http1.rs  conn_http2.rs  cookies.rs  deadline.rs  either.rs  error.rs  from_utf8.rs  head_ext.rs  lib.rs  params.rs  peek.rs  proto.rs  req_ext.rs  reqb_ext.rs  res_ext.rs  tls.rs  tls_pass.rs  tokio.rs  tokio_conv.rs  uninit.rs  uri_ext.rs
src/client/: agent.rs  conn.rs  cookies.rs  mod.rs  req_ext.rs  reqb_ext.rs
src/h1/: chunked.rs  connection.rs  error.rs  http11.rs  limit.rs  mod.rs  task.rs
src/psl/: date.txt  mod.rs
src/server/: chain.rs  conn.rs  handler.rs  limit.rs  middle.rs  mod.rs  path.rs  peek.rs  reply.rs  resb_ext.rs  route.rs  router.rs  serv_handle.rs  serv_req_ext.rs  statik.rs  tls_config.rs
src/test/: basic.rs  charset.rs  cookie.rs  get.rs  gzip.rs  json.rs  mod.rs  post.rs  redir.rs  simplelog.rs  timeout.rs  top.rs  topsites.rs
tests/: basic.rs  charset.rs  common.rs  cookie.rs  get.rs  gzip.rs  json.rs  post.rs  redir.rs  serve_dir.rs  static_dir.rs  static_file.rs  timeout.rs  tls.rs
tests/data/: index.html  tls_cert.pem
tests/data/subdir/: ok.txt
tokio-traits/: Cargo.toml  README.md
tokio-traits/src/: lib.rs
