[package]
name = "hreq"
version = "0.3.0"
authors = ["Martin Algesten <martin@lookback.io>"]
description = "hreq is a user first async http client"
license = "MIT/Apache-2.0"
repository = "https://github.com/algesten/hreq"
readme = "README.md"
keywords = ["web", "request", "http", "rest", "client"]
categories = ["web-programming::http-client"]
edition = "2018"


[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "tokio",
    # "smol",
    # "async-std",
    "gzip",
    "tls"
]
smol = [
    "smol-lib"
]
async-std = [
    "async-std-lib",
]
tokio = [
    "tokio-lib",
]
gzip = [
    "async-compression",
]
tls = [
    "rustls",
    "webpki",
    "webpki-roots",
]
test-topsites = []
fuzz = []

[dependencies]
bytes = "0.5"
cookie = { version = "0.14", features = ["percent-encode"] }
flate2 = "1"
futures-io = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro", "io"] }
hreq-h2 = { version = "0.2.5" }
http = "0.2"
httparse = "1"
log = "0.4"
once_cell = "1"
qstring = "0.7"
async-trait = "0.1"
encoding_rs = "0.8"
publicsuffix = { default-features = false, version = "1.5.4" }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
# keep in sync with time brought in by cookie
time = "=0.2.16"

## smol
smol-lib = { package="smol", version = "0.1", optional = true }

## async-std
async-std-lib = { package = "async-std", version = "1", optional = true }

## tokio
tokio-lib = { package = "tokio", version = "0.2", default-features = false, features = ["rt-core", "tcp", "dns", "time", "fs"], optional = true }

## gzip
async-compression = { version = "0.3", default-features = false, features = ["gzip", "futures-bufread"], optional = true }

## tls
rustls = { version = "0.17.0", default-features = false, features = [], optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.20", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"
env_logger = "0.7"
serde_derive = "1"
tide = "0.12"
async-std-lib = { package = "async-std", version = "1", features = ["unstable"] }
paste = "0.1"
rand = "0.7"
