[package]
name = "hreq"
version = "0.7.0"
authors = ["Martin Algesten <martin@lookback.io>"]
description = "hreq is a user first async http client"
license = "MIT/Apache-2.0"
repository = "https://github.com/algesten/hreq"
readme = "README.md"
keywords = ["web", "request", "http", "rest", "client"]
categories = ["web-programming::http-client"]
edition = "2018"


[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "tokio",
#    "smol",
#    "async-std",
    "gzip",
    "tls",
    "server"
]
# tokio
# async-std
gzip = [
    "async-compression",
]
tls = [
    "rustls",
    "webpki",
    "webpki-roots",
]
test-topsites = []
fuzz = []
server = [
    "regex",
    "futures-core",
]

[dependencies]
bytes = "0.6"
cookie = { version = "0.14", default-features = false, features = ["percent-encode"] }
encoding_rs = "0.8"
flate2 = "1"
futures-io = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await-macro", "io"] }
hreq-h1 = { version = "0.3.8" }
hreq-h2 = { version = "0.2.6-v2" }
http = "0.2"
httparse = "1"
httpdate = "0.3.2"
once_cell = "1"
publicsuffix = { default-features = false, version = "1.5.4" }
qstring = "0.7"
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
log = "0.4"
mime_guess = "2"
chardetng = "0.1"

# keep in sync with time brought in by cookie
time = "0.2"

## async-std
async-std = { version = "1", optional = true }

## tokio
tokio = { version = "0.2", default-features = false, features = ["rt-core", "tcp", "dns", "time", "fs"], optional = true }

## smol
smol = { version = "*", optional = true }

## gzip
async-compression = { version = "0.3", default-features = false, features = ["gzip", "futures-bufread"], optional = true }

## tls
rustls = { version = "0.18", default-features = false, features = ["dangerous_configuration"], optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.20", optional = true }

## server
regex = { version = "1", default-features = false, features = ["std", "unicode"], optional = true }
futures-core = { version = "0.3", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
serde_derive = "1"
rand = "0.7"
env_logger = "0.8"
pretty_env_logger = "0.4"
tokio = { package = "tokio", version = "0.2", default-features = false, features = ["full"] }
